Add NPM accordion package

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@glidejs/glide": "^3.4.1",
+    "accordion-js": "^3.1.1",
     "webpack": "^5.61.0"
   },
   "devDependencies": {
